# NcursesTime

./: .gitignore  CMakeLists.txt  CMakePresets.json  Countdown.cpp  Countdown.h  DateTime.cpp  DateTime.h  UI.cpp  UI.h  main.cpp  todo
test/: CMakeLists.txt  CountdownTest.cpp  DateTimeTest.cpp
